--- a/letsencrypt/translations/en.yaml
+++ b/letsencrypt/translations/en.yaml
@@ -18,7 +18,7 @@ configuration:
     name: Challenge
     description: The type of challenge used to validate the domain.
   acme_root_ca_cert:
-    name: ACME Rott CA Certificate
+    name: ACME Root CA Certificate
     description: >-
       If your custom ACME server uses a certificate signed by an untrusted
       certificate authority (CA), you can add the root certificate to the trust
@@ -32,5 +32,15 @@ configuration:
   dns:
     name: DNS
     description: DNS Provider configuration
+  key_type:
+    name: Key Type
+    description: >-
+      Select the certificate key type. If unset, will auto-detect based on
+      the key type of the existing certificate or default to ecdsa.
+  elliptic_curve:
+    name: Elliptic Curve
+    description: >-
+      Elliptic curve for ECDSA keys. This option must be used with Key Type
+      set to ECDSA. If unset the Certbot default will be used.
 network:
   80/tcp: Only needed for http challenge
